# uselinux

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  Makefile  README.md
.github/workflows/: cmake.yml
docs/: INSTALL.md  README.md  dig_from_json.md
docs/man/: ancientpkg-dig.1
misc/: doxygen_custom.css  doxygen_footer_custom.html
modules/parson/: CMakeLists.txt
opener/: README.md  opener.c
src/: CMakeLists.txt  README.adoc  ancientpkg.c  ancientpkg.h  main.c  userspace.h  utils.c  utils.h
src/ancientpkg/: CMakeLists.txt  ae-curse.c  ancientpkg.h  ancientpkg_utils.c  ancientpkg_utils.h  curse.c  curse.h  curse_ancient_egypt.c  curse_diseased.c  curse_infohazard.c  cursedpkg.c  cursedpkg.h  date.c  dig.c  digcommon.c  digstats.c  excavate.c  infohazard.c  infohazard.h  infohazard_amnestic.c  infohazard_berryman_langford.c  install.c  jsondig.c  main.c  package.c  status.c  status.h  validate_args.c  validate_args.h
src/ancientpkg/curse/: ae-curse.c  cursedpkg.c  infohazard.c  infohazard.h
src/ancientpkg/include/: ancientpkg.h  cursedpkg.h
src/common/: CMakeLists.txt  ansiescapes.h  argparse.c  argparse.h  csv.h  detect_os.c  log.c  log.h  macros.h  mtwister.c  mtwister.h  opener.c  split.c  utils.c  utils.h
src/csvreader/: CMakeLists.txt  csv.c  fread_csv_line.c
src/opener/: CMakeLists.txt  detect_os.c  detect_os.h  opener.h
src/penguinspam/: CMakeLists.txt  penguinspam.c  penguinspam.h  penguinspamcli.c
src/rmbloat/: CMakeLists.txt  rmbloat-common.c  rmbloat-common.h  rmbloat-csv.c  rmbloat-from-file.c  rmbloat-rm.c  rmbloat.c  rmbloat.h  rmbloatapi.c  rmbloatapi.h
src/stackov/: CMakeLists.txt  stackov.c
src/uselinux/: CMakeLists.txt  ancientpkg.c  ancientpkg.h  antisnap.c  antisnap.h  bloatrm.c  bloatrm.h  deskenv.c  deskenv.h  hackerman.c  hackerman.h  main.c  mtwister.h  uselinuxcommon.c  uselinuxcommon.h  userspace.c  userspace.h  utils.c  utils.h  yearoflinuxdesktop.c  yearoflinuxdesktop.h
src/uselinux/completion/: completion.bash
stackov_src/: stackov.c
test/: Makefile  test-hackerman.bats  test-hackerman.sh
